# book-corrector

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  TODOS.md  base-prompt.md  check_users.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  render.yaml  settings.py
.claude/: settings.local.json
corrector/: __init__.py  cli.py  docx_utils.py  engine.py  llm.py  model.py  prompt.py  text_utils.py
deploy/: ORACLE_CLOUD_GUIDE.md  README.md  nginx.conf  oracle-cloud-setup.sh  verify-deployment.sh
docs/: DEPLOYMENT_COMPARISON.md  DOCKER.md  RENDER_DEPLOYMENT.md  RENDER_FRONTEND_DEPLOYMENT.md  azure_content_filter_deep_dive.md  base-prompt.md  batch-processing-plan.md  feature-correction-acceptance.md  frontend-plan.md  future-professional-mode.md  market-analysis.md  plan-backend.md  plan-implementacion-core.md  ui-plan.md
examples/: .gitkeep  README.md  example_correction_workflow.py  example_curl_commands.sh
outputs/: .gitkeep
progress/: backend-checklist.md  core-checklist.md  frontend-checklist.md
scripts/: debug_gemini.py  debug_gemini_verbose.py  migrate_to_neon.py  monitor_and_extract.py  monitor_progress.py  procesar_cli_batch.sh  procesar_lote.py  procesar_lote_nuevo.py  reprocesar_con_nuevo_prompt.py  run_corrector.py
server/: Dockerfile  __init__.py  auth.py  db.py  demo_data.py  deps.py  limits.py  main.py  migrate.py  models.py  requirements.txt  routes_auth.py  routes_documents.py  routes_projects.py  routes_runs.py  routes_suggestions.py  scheduler.py  scheduler_registry.py  schemas.py  storage.py  worker.py
tests/: check_users.py  create_test_user.py  run_test.bat  test_azure.py  test_azure_gpt41.py  test_engine_apply.py  test_export.py  test_gemini_fake.py  test_gemini_live.py  (+3 more)
(+42 files in other folders)
